# ggez_text_bug

./: Cargo.toml
src/: main.rs
