[package]
name = "ggez_text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { path = "/Users/donblas/Programming/ggez", default-features = false }

# ggez and winit are slow and loading images otherwise
[profile.dev.package."*"]
opt-level = 1